# business_manager_ci

./: .env.template  Dockerfile.app  Dockerfile.migrations  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/migrations/: alembic.ini  env.py
app/migrations/versions/: 2025_08_21_1125-6880e3c4c2a3_initial_commit.py  2025_08_24_1332-89c6441fb928_initial_commit.py
app/src/: index.html  main.py
app/src/core/: config.py
app/src/scripts/: init_seed.py
app/src/tests/: conftest.py
migrations/: alembic.ini  env.py
migrations/versions/: 2025_06_11_1344-6769a12e6018_create_tables.py
scripts/: run_migrations.sh
src/: .env.template
src/alembic/: env.py
src/alembic/versions/: 2025_06_11_1345-c2db9a37a561_add_foreignkey_from_user_to_team.py  2025_06_22_1618-89cbc79c5bc2_add_usertoken_model.py  2025_06_22_1624-5a43d5e4e42e_fix_ip_address_column_name_in_user_.py
src/calendars/interactors/: __init__.py
src/calendars/routers/: __init__.py  calendar.py
src/calendars/services/: __init__.py  calendar_service.py
src/core/: __init__.py  config.py
src/core/interfaces/: __init__.py  auth.py  common.py  permissions.py
src/core/models/: __init__.py  associations.py  base.py  db_helper.py
src/core/providers/: permission_validator_provider.py
src/evaluations/interactors/: evaluation_interactors.py
src/evaluations/interfaces/: __init__.py
src/evaluations/schemas/: evaluation.py
src/meetings/interactors/: meeting_interactor.py
src/meetings/models/: __init__.py  meeting.py
src/static/: script.js  style.css
(+106 files in other folders)
